# eventbrite_scraper

./: .gitignore  LICENSE  README.md  db.py  main.py  models.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: ci.yml
tests/: test_scraper.py
tests/fixtures/: event_1.html  event_2.html  event_3.html  event_4.html  event_5.html  jazz_request.html
